--- a/plot3.html
+++ b/plot3.html
@@ -22,7 +22,7 @@
         </div>
     </nav>
 
-    <img src="plot3.png" alt="Wind Speed vs Location">
+    <img src="Plot3.png" alt="Wind Speed vs Location">
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
