--- a/comparisons.html
+++ b/comparisons.html
@@ -25,19 +25,19 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-6">
-                <img src="plot1.png" alt="Humidity vs Location">
+                <img src="Plot1.png" alt="Humidity vs Location">
             </div>
             <div class="col-sm-12 col-md-6">
-                <img src="plot2.png" alt="Max Temperature vs Location">
+                <img src="Plot2.png" alt="Max Temperature vs Location">
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-12 col-md-6">
-                <img src="plot3.png" alt="Wind Speed vs Location">
+                <img src="Plot3.png" alt="Wind Speed vs Location">
             </div>
             <div class="col-sm-12 col-md-6">
-                <img src="plot4.png" alt="Cloudiness vs Location">
+                <img src="Plot4.png" alt="Cloudiness vs Location">
             </div>
         </div>
     </div>
